--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
     <title>LACS SHOP!</title>
-    <link rel="stylesheet" href="css/index.css">
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.js"></script>
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js"></script>
 </head>
 <body>
 <h1>欢迎来到mclover232的个人网站!</h1>
