--- a/lefun/index.html
+++ b/lefun/index.html
@@ -11,9 +11,54 @@
 <body>
 <div class="loadmask">
     <hgroup>
-        <div class="load_title">乐FUN</div>
-        <div class="load_subtitle">教寓于乐的学习平台！</div>
+        <h1 class="load_title">乐FUN</h1>
+        <h3 class="load_subtitle">教寓于乐的学习平台！</h3>
     </hgroup>
 </div>
+<header>
+<h4>乐FUN!</h4>
+</header>
+<main>
+    <h4>我的课程</h4>
+    <div class="lesson myles">
+        <div class="le_leader">JavaScript</div>
+        <div class="progresser">已学习到：13 基础函数</div>
+    </div>
+    <h4>推荐课程</h4>
+    <div class="lesson">
+        <div class="le_leader">CSS3</div>
+        <div class="progresser">未学习</div>
+    </div>
+    <div class="lesson">
+        <div class="le_leader">HTML5</div>
+        <div class="progresser">未学习</div>
+    </div>
+    <div class="lesson">
+        <div class="le_leader">React</div>
+        <div class="progresser">未学习</div>
+    </div>
+    <div class="lesson">
+        <div class="le_leader">Node.js</div>
+        <div class="progresser">未学习</div>
+    </div>
+    <div class="lesson">
+        <div class="le_leader">Vue</div>
+        <div class="progresser">未学习</div>
+    </div>
+    <div class="lesson">
+        <div class="le_leader">Java</div>
+        <div class="progresser">未学习</div>
+    </div>
+</main>
+<footer>
+    <div class="navs">
+        <img src="./image/nav1.png" alt="" class="navimg">
+        <div class="navs_name">学习模块</div>
+    </div>
+    <div class="navs">
+        <img src="./image/nav2.png" alt="" class="navimg">
+        <div class="navs_name">在线竞技</div>
+    </div>
+</footer>
 </body>
 </html>
