--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./js/index.js"></script>
 </head>
 <body>
+<div class="bg"></div>
 <h1>欢迎来到mclover232的个人网站!</h1>
 <h3>网站在近期会有较大功能和界面更新，敬请期待！</h3>
 <div>个人作业：</div>
